--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -46,7 +46,8 @@ bindsym $mod+t [class="(?i)urxvt"] focus
 # Font for window titles. {{{
 # Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Terminus Medium 8
+font pango:Input Sans Condensed Light 7.5
+#font pango:Terminus Medium 8
 #font pango:DejaVu Sans Mono, Font Awesome 5 Free, Font Awesome 5 Brands 8
 #font pango:SF Compact Display Light 8
 #font pango:SF Pro Display Medium 8
