--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -380,7 +380,7 @@ for_window [window_role="task_dialog"] floating enable
 for_window [class="(?i)lxqt-panel"] floating enable
 for_window [class="(?i)yad"] floating enable
 for_window [class="(?i)mpv"] floating enable
-for_window [class="(?i)vlc"] floating enable
+# for_window [class="(?i)vlc"] floating enable
 for_window [class="(?i)celluloid"] floating enable
 for_window [class="(?i)gradio"] floating enable
 for_window [class="(?i)ulauncher"] floating enable
