--- a/private_dot_config/private_qutebrowser/autoconfig.yml
+++ b/private_dot_config/private_qutebrowser/autoconfig.yml
@@ -50,6 +50,8 @@ settings:
   content.javascript.enabled:
     '*://mobile.twitter.com/*': true
     global: false
+  content.user_stylesheets:
+    global: ~/.config/qutebrowser/css/darculized-all-sites.css
   content.webgl:
     global: false
   fonts.default_family:
