--- a/private_dot_config/mopidy/mopidy.conf
+++ b/private_dot_config/mopidy/mopidy.conf
@@ -187,7 +187,7 @@ excluded_file_extensions =
 [somafm]
 encoding = aac
 quality = highest
-#dj_as_artist = true
+dj_as_artist = true
 
 [dleyna]
 enabled = true
