--- a/private_dot_config/picom/picom.conf
+++ b/private_dot_config/picom/picom.conf
@@ -9,6 +9,28 @@ backend = "xrender";
 # GLX backend is typically much faster but depends on a sane driver.
 #backend = "glx";
 
+# Disable the use of damage information. 
+# This cause the whole screen to be redrawn everytime, instead of the part of the screen
+# has actually changed. Potentially degrades the performance, but might fix some artifacts.
+# The opposing option is use-damage
+#
+# no-use-damage = false
+use-damage = true
+
+# Specify refresh rate of the screen. If not specified or 0, picom will 
+# try detecting this with X RandR extension.
+#
+# refresh-rate = 60
+refresh-rate = 0
+
+# Limit picom to repaint at most once every 1 / 'refresh_rate' second to 
+# boost performance. This should not be used with 
+#   vsync drm/opengl/opengl-oml
+# as they essentially does sw-opti's job already, 
+# unless you wish to specify a lower refresh rate than the actual value.
+#
+#sw-opti = true
+
 ##################################
 ##
 ## GLX backend
