--- a/private_dot_config/polybar/modules.ini
+++ b/private_dot_config/polybar/modules.ini
@@ -46,7 +46,6 @@ label-unfocused-font = 5
 ; visible = Active workspace on unfocused monitor
 label-visible = %name%
 label-visible-foreground = ${self.label-unfocused-foreground}
-label-visible-background = ${self.label-unfocused-background}
 label-visible-underline = ${self.label-unfocused-underline}
 label-visible-padding = 2
 label-visible-font = 5
@@ -121,7 +120,8 @@ format-underline = ${colors.green}
 ; %{A1:player-mpris-tail previous:}  %{A} \
 ; %{A1:player-mpris-tail play-pause:} {icon-reversed} %{A} \
 ; %{A1:player-mpris-tail next:}  %{A}'
-exec = exec player-mpris-tail -f '{icon} {:artist:t36:{artist} - :}{:t48:{title}:}' '--icon-playing' '%{F#50fa7b}%{F-}' '--icon-paused' '%{F#50fa7b}%{F-}' '--icon-stopped' '%{F#50fa7b}%{F-}'
+; exec = exec player-mpris-tail -f '{icon} {:artist:t24:{artist} - :}{:t36:{title}:}' '--icon-playing' '%{F#50fa7b}%{F-}' '--icon-paused' '%{F#50fa7b}%{F-}' '--icon-stopped' '%{F#50fa7b}%{F-}'
+exec = exec polybar_mpris.sh
 tail = true
 click-left = playerctl play-pause &
 click-right = playerctl stop &
@@ -242,6 +242,8 @@ type = custom/text
 content-background = ${colors.lightbg}
 content-foreground = ${colors.lightfg}
 content-overline = ${colors.lightfg}
+content-font = 3
+content-padding = 1
 
 [module/terminal]
 inherit = module/launcher
