--- a/private_dot_config/systemd/user/mbsync.service
+++ b/private_dot_config/systemd/user/mbsync.service
@@ -3,5 +3,5 @@ Description=Mailbox synchronization service
 
 [Service]
 Type=oneshot
-Slice=cpu16.slice
+Slice=nicy-cpu16.slice
 ExecStart=/usr/bin/mbsync -c %E/mutt/mbsyncrc -qa
