--- a/private_dot_config/systemd/user/pkgs-check.service
+++ b/private_dot_config/systemd/user/pkgs-check.service
@@ -3,5 +3,5 @@ Description=Check for package updates service
 
 [Service]
 Type=oneshot
-Slice=cpu16.slice
+Slice=nicy.slice
 ExecStart=/usr/local/bin/pkgs check
