--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -11,11 +11,11 @@ set -g renumber-windows off
 set -wg mode-keys vi
 
 ## set the default TERM
-set -g default-terminal screen
+# set -g default-terminal screen
 ## update the TERM variable of terminal emulator when creating a new session or attaching a existing session
 set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM'
 ## determine if we should enable 256-colour support
-if "[[ ${TERM} =~ 256color || ${TERM} == fbterm || ${TERM} == rxvt-unicode ]]" 'set -g default-terminal screen-256color'
+# if "[[ ${TERM} =~ 256color || ${TERM} == fbterm || ${TERM} == rxvt-unicode ]]" { set -g default-terminal screen-256color }
 
 
 # Reload an updated configuration without restarting tmux
@@ -25,6 +25,7 @@ bind r source-file "$HOME/.tmux.conf"
 bind h split-window -h
 bind v split-window -v
 
+# if "[[ ${TERM} != fbterm ]]" { set -g mouse on }
 set -g mouse on
 set -g history-limit 30000
 
@@ -34,11 +35,11 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 #urxvt tab like window switching (-n: no prior escape seq)
-bind -n S-down new-window
-bind -n S-left prev
-bind -n S-right next
-bind -n C-left swap-window -t -1
-bind -n C-right swap-window -t +1
+# bind -n S-down new-window
+bind -n C-PageDown prev
+bind -n C-PageUp next
+bind -n C-Left swap-window -t -1
+bind -n C-Right swap-window -t +1
 
 set -g status-interval 5
 
@@ -46,30 +47,30 @@ set -g status-interval 5
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
+set -g @dracula-show-left-icon session
+
 set -g @dracula-show-battery false
 set -g @dracula-show-network false
 set -g @dracula-show-weather false
 set -g @dracula-show-fahrenheit false
 set -g @dracula-show-powerline false
-set -g @dracula-show-left-icon session
-set -g @dracula-border-contrast false
-set -g @dracula-military-time true
+set -g @dracula-border-contrast true
 set -g @dracula-show-timezone false
 set -g @dracula-day-month false
 
 set -g @dracula-cpu-usage false
+set -g @dracula-ram-usage false
+set -g @dracula-gpu-usage false
+if "[[ ${TERM} == fbterm ]] || ! xset q &>/dev/null" { set -g @dracula-show-loadavg true }
+set -g @dracula-refresh-rate 12
+set -g @dracula-military-time true
 set -g @dracula-show-time true
-#if-shell "xset q &>/dev/null" 'set -g @dracula-cpu-usage false; set -g @dracula-ram-usage false' 'set -g @dracula-cpu-usage true; set -g @dracula-ram-usage true'
+set -g @dracula-show-flags true
 set -g @plugin 'dracula/tmux'
 
 #set -g status-right '#(cat /proc/loadavg|cut -d" " -f1,2,3) #(date +"%a %e %b %H:%M") '
 
-#set -g status-right '%a %e %b %H:%M '
-#set -g status-right '#{sysstat_cpu} #[defaut]'
-#set -g @plugin 'samoshkin/tmux-plugin-sysstat'
-
-#set -g @plugin 'tmux-plugins/tmux-cpu'
-#set -g status-right '#{cpu_bg_color} CPU: #{cpu_icon} #{cpu_percentage} |#[defaut]'
+#set -g status-right '#[defaut]'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '/usr/share/tmux-plugin-manager/tpm'
