--- a/private_dot_config/environment.d/10-common.conf
+++ b/private_dot_config/environment.d/10-common.conf
@@ -1,4 +1,5 @@
 GTK_CSD=1
 GTK2_RC_FILES=$HOME/.gtkrc-2.0
 QT_WAYLAND_DISABLE_WINDOWDECORATION=1
-QT_QPA_PLATFORMTHEME="qt5ct"
+QT_QPA_PLATFORMTHEME=qt5ct
+QT_LOGGING_RULES='*=false'
