--- a/private_dot_config/polybar/config
+++ b/private_dot_config/polybar/config
@@ -30,8 +30,8 @@ format-background = ${colors.lightbg}
 format-underline =
 format-overline =
 format-spacing = 0
-format-padding = 1
-format-margin = 1
+format-padding = 2
+format-margin = 0
 format-offset =
 
 ;compositing-background = xor
@@ -42,51 +42,45 @@ format-offset =
 ; If set to true the bar can be transparent without a compositor.
 pseudo-transparency = false
 
-[colors]
-black    = ${xrdb:color0}
-red      = ${xrdb:color1:#ff5555}
-green    = ${xrdb:color2:#50fa7b}
-yellow   = ${xrdb:color3}
-blue     = ${xrdb:color4}
-magenta  = ${xrdb:color5}
-cyan     = ${xrdb:color6}
-white    = ${xrdb:color7}
-brblack  = ${xrdb:color8}
-brred    = ${xrdb:color9}
-brgreen  = ${xrdb:color10}
-bryellow = ${xrdb:color11}
-brblue   = ${xrdb:color12}
-brmagenta= ${xrdb:color13}
-brcyan   = ${xrdb:color14}
-brwhite  = ${xrdb:color15}
-
-navy	= ${xrdb:navy:#001f3f}
-aqua	= ${xrdb:aqua:#7fdbff}
-teal	= ${xrdb:teal:#39cccc}
-olive	= ${xrdb:olive:#3d9970}
-lime	= ${xrdb:lime:#01ff70}
-orange	= ${xrdb:orange:#ff851b}
-maroon	= ${xrdb:maroon:#85144b}
-fuchsia	= ${xrdb:fuchsia:#f012be}
-purple	= ${xrdb:purple:#b10dc9}
-gray	= ${xrdb:gray:#aaaaaa}
-silver	= ${xrdb:silver:#dddddd}
-
-foreground = ${xrdb:foreground}
-;background = ${xrdb:background}
-background	= #991e1f29
-
-;lightbg	= ${xrdb:lightbg:#99282a36}
-lightbg	= #bf282a36
-;lightfg	= ${xrdb:lightfg:#7ff8f8f2}
-lightfg	= #7ff8f8f2
-
-;primary = ${xrdb:primary:#bfdf4a16}
-primary	= ${xrdb:primary:#bf6d5890}
-;secondary = ${xrdb:secondary:#bf713fc6}
-secondary = ${xrdb:secondary:#bfff5555}
-
-alert	= ${xrdb:alert:#df4a16}
+; [colors]
+; black    = ${xrdb:color0}
+; red      = ${xrdb:color1:#ff5555}
+; green    = ${xrdb:color2:#50fa7b}
+; yellow   = ${xrdb:color3}
+; blue     = ${xrdb:color4}
+; magenta  = ${xrdb:color5}
+; cyan     = ${xrdb:color6}
+; white    = ${xrdb:color7}
+; brblack  = ${xrdb:color8}
+; brred    = ${xrdb:color9}
+; brgreen  = ${xrdb:color10}
+; bryellow = ${xrdb:color11}
+; brblue   = ${xrdb:color12}
+; brmagenta= ${xrdb:color13}
+; brcyan   = ${xrdb:color14}
+; brwhite  = ${xrdb:color15}
+;
+; navy	= ${xrdb:navy:#001f3f}
+; aqua	= ${xrdb:aqua:#7fdbff}
+; teal	= ${xrdb:teal:#39cccc}
+; olive	= ${xrdb:olive:#3d9970}
+; lime	= ${xrdb:lime:#01ff70}
+; orange	= ${xrdb:orange:#ff851b}
+; maroon	= ${xrdb:maroon:#85144b}
+; fuchsia	= ${xrdb:fuchsia:#f012be}
+; purple	= ${xrdb:purple:#b10dc9}
+; gray	= ${xrdb:gray:#aaaaaa}
+; silver	= ${xrdb:silver:#dddddd}
+;
+; foreground = ${xrdb:foreground}
+; ; Require transparency
+; background	= #df1e1f29
+; lightbg	= #bf282a36
+; lightfg	= #7ff8f8f2
+; primary	= ${xrdb:primary:#bf6d5890}
+; secondary = ${xrdb:secondary:#bfff5555}
+;
+; alert	= ${xrdb:alert:#df4a16}
 
 [bar/common]
 enable-ipc = true
@@ -101,7 +95,8 @@ radius = 0.0
 
 background = ${colors.background}
 foreground = ${colors.foreground}
-line-size = 1
+
+line-size = 2
 line-color = #f00
 border-top-size = 0
 border-left-size = 0
@@ -110,25 +105,21 @@ border-bottom-size = 0
 padding-left = 1
 padding-right = 1
 module-margin-left = 0
-module-margin-right = 0
+module-margin-right = 1
 
-; font-0 = Input Mono Narrow:style=Thin:pixelsize=8;1
 font-0 = SF Compact Display:style=Light:pixelsize=9;1
+; font-0 = Input Mono Narrow:style=Thin:pixelsize=8;1
 font-1 = SF Pro Display:style=Light:pixelsize=9;1
-; font-2 = SF Compact Display:style=Light:pixelsize=9;1
+font-2 = Input Mono:style=Extra Light:pixelsize=8;2
 ; font-2 = SF Mono:style=Light:pixelsize=8;1
-font-3 = feather:style=Regular:pixelsize=9;1
-font-4 = feather:style=Regular:pixelsize=10;2
-;font-2 = SF Compact Text:style=Regular:pixelsize=8;1
 ; font-2 = Terminus:style=Medium:pixelsize=8;1
-; font-2 = Fira Code Light:pixelsize=8;2
-; font-2 = Monoisome:style=Regular:pixelsize=7;1
-font-2 = Input Mono:style=Extra Light:pixelsize=8;1
 ; font-2 = Roboto Mono Light for Powerline:style=Light,Regular:pixelsize=8;1
-;font-2 = Ubuntu Mono:style=Regular:pixelsize=9.5;1
 ;font-2 = Digital\-7 Mono,Digital\-7:style=Mono:pixelsize=9;1
 ;font-2 = Unifont:fontformat=truetype:size=8:antialias=false;0
+font-3 = SF Compact Display:style=Light:pixelsize=9;1
+; font-3 = feather:style=Regular:pixelsize=9;1
 ;font-3 = FontAwesome:pixelsize=8;1
+font-4 = feather:style=Regular:pixelsize=9;2
 ;font-4 = Ionicons:pixelsize=8;1
 ;font-5 = Siji:pixelsize=8;1
 
@@ -140,7 +131,8 @@ tray-position = none
 
 ; Module files: i3, xwindow, player-mpris-tail, pulseaudio, cpu, memory,
 ; 	network, date, updates
-include-file = ~/.config/polybar/modules.ini
+include-file = ~/.config/polybar/colors.ini
+include-file = ~/.config/polybar/modules_colored.ini
 
 scroll-up = i3wm-wsnext
 scroll-down = i3wm-wsprev
