--- a/private_dot_config/systemd/user/i3-cycle-focus.service
+++ b/private_dot_config/systemd/user/i3-cycle-focus.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=i3 cycle focus
-PartOf=graphical-session.target
+#PartOf=graphical-session.target
 
 [Service]
 Slice=session.slice
