--- a/private_dot_config/systemd/user/picom.service
+++ b/private_dot_config/systemd/user/picom.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Picom
 Documentation=man:picom(1)
-PartOf=graphical-session.target
+#PartOf=graphical-session.target
 
 [Service]
 Slice=session.slice
