--- a/dot_mpv/mpv.conf
+++ b/dot_mpv/mpv.conf
@@ -77,7 +77,7 @@ framedrop=vo
 profile=sw-fast
 sws-scaler=fast-bilinear
 #sws-fast=yes
-window-scale=0.25
+#window-scale=0.25
 #geometry=99%:99%
 geometry=0:35
 
