--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -10,12 +10,17 @@ bind 0 select-window -t10
 set -g renumber-windows off
 set -wg mode-keys vi
 
-## set the default TERM
+if "[[ ${TERM} != fbterm ]]" { set -g mouse on }
+# set -g mouse on
+
+# # set the default TERM
 # set -g default-terminal screen
-## update the TERM variable of terminal emulator when creating a new session or attaching a existing session
+set -g default-terminal screen-256color
+# determine if we should enable 256-colour support
+# if "[[ ${TERM} == xterm-256color || ${TERM} == fbterm || ${TERM} == rxvt-unicode-256color ]]" { set -g default-terminal screen-256color }
+if "[[ ${TERM} == linux ]]" { set -g default-terminal screen }
+# update the TERM variable of terminal emulator when creating a new session or attaching a existing session
 set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM'
-## determine if we should enable 256-colour support
-# if "[[ ${TERM} =~ 256color || ${TERM} == fbterm || ${TERM} == rxvt-unicode ]]" { set -g default-terminal screen-256color }
 
 
 # Reload an updated configuration without restarting tmux
@@ -25,8 +30,6 @@ bind r source-file "$HOME/.tmux.conf"
 bind h split-window -h
 bind v split-window -v
 
-# if "[[ ${TERM} != fbterm ]]" { set -g mouse on }
-set -g mouse on
 set -g history-limit 30000
 
 bind P paste-buffer
